force-app/main/default/objects/BMCServiceDesk__WebAPIJob__c/BMCServiceDesk__WebAPIJob__c.object-meta.xml
<CustomObject>
    <description>Stores the Web API Job records that are created after applying the web API configuration on the Task object.</description>
    <label>Web API Job</label>
    <nameField>
        <displayFormat>WebAPI Job-{0000}</displayFormat>
        <label>Web API Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web API Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>