force-app/main/default/objects/BMCServiceDesk__WebAPIJob__c/fields/BMCServiceDesk__Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Status__c</fullName>
    <inlineHelpText>Stores the current status of an API job.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>