force-app/main/default/objects/BMCServiceDesk__WebAPIJob__c/fields/BMCServiceDesk__SuccessResponse__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SuccessResponse__c</fullName>
    <inlineHelpText>This field stores service response if a request is successful.</inlineHelpText>
    <label>Success Response</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>