force-app/main/default/objects/BMCServiceDesk__WebAPIJob__c/fields/BMCServiceDesk__Task__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Task__c</fullName>
    <inlineHelpText>Specifies the task to which the API job is associated.</inlineHelpText>
    <label>Task</label>
    <referenceTo>BMCServiceDesk__Task__c</referenceTo>
    <relationshipLabel>Web API Jobs</relationshipLabel>
    <relationshipName>WebAPI_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>