force-app/main/default/objects/BMCServiceDesk__WebAPIJob__c/fields/BMCServiceDesk__WebAPIConfiguration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__WebAPIConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies the  web API configuration to which the API job is associated.</inlineHelpText>
    <label>Web API Configuration</label>
    <referenceTo>BMCServiceDesk__WebAPIConfiguration__c</referenceTo>
    <relationshipLabel>Web API Jobs</relationshipLabel>
    <relationshipName>WebAPI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>