force-app/main/default/objects/BMCServiceDesk__WebAPIJob__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__WebAPIConfiguration__c</columns>
    <columns>BMCServiceDesk__Status__c</columns>
    <columns>BMCServiceDesk__FailedResponse__c</columns>
    <columns>BMCServiceDesk__SuccessResponse__c</columns>
    <columns>BMCServiceDesk__RetryCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>